# aether

./: .gitignore  CONTRIBUTING.md  Cargo.toml  LICENSE  NOTICE  README.md  README_DEMO.md  SECURITY.md  install.sh
.github/workflows/: ci.yml  release.yml
aether/: __init__.py  __main__.py  aether.lark  dag.py  executor.py  governor.py  main.py  parser.py
asl/: registry.json
benchmark/: autogen_equiv.py  bench2_autogen.py  bench2_langgraph.py  bench3_autogen.py  bench3_langgraph.py  bench4_autogen.py  bench4_langgraph.py  demo_langgraph.py  langchain_equiv.py  token_count.py
docs/: WHITEPAPER.md  agent_workflow.md  analysis.md  asl_registry.md  benchmark.md  kernel_manual.md  open-core.md  proposals.md  tech_stack_analysis.md
examples/: bench2_branch.ae  bench3_classify.ae  bench4_recovery.ae  demo.ae  demo.ae.json  demo_showcase.ae  demo_showcase_healed.ae.json  pipeline.as  safety_demo.ae  self_heal_demo.ae
lens/: index.html
python/: pyproject.toml
python/aether_kernel/: __init__.py  cli.py
python/scripts/: build_wheels.py
sdk/: AUDIT_PROMPT.md  SYSTEM_PROMPT.md  mcp_config.json
spec/: aether.ebnf  types.md
src/: aether.pest  api_server.rs  ast.rs  audit.rs  executor.rs  lib.rs  main.rs  mcp_server.rs  parser.rs  registry.rs  short.rs  translate.rs
