[package]
name = "aether_kernel"
version = "0.3.0"
edition = "2021"
description = "The Aether Kernel — Runtime for the Agentic Age"
license = "Apache-2.0"
repository = "https://github.com/baiers/aether"
homepage = "https://aether-lang.dev"
keywords = ["agentic", "orchestration", "llm", "dag", "ir"]
categories = ["compilers", "command-line-utilities"]

[[bin]]
name = "aether"
path = "src/main.rs"

[[bin]]
name = "aether-mcp"
path = "src/mcp_server.rs"

[[bin]]
name = "aether-api"
path = "src/api_server.rs"

[dependencies]
pest = "2.7"
pest_derive = "2.7"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
uuid = { version = "1.0", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
axum = "0.8"
tower-http = { version = "0.6", features = ["cors"] }
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json"] }

[lib]
name = "aether_kernel"
path = "src/lib.rs"
