[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "aether-kernel"
version = "0.3.0"
description = "Aether — AI-native pipeline language and kernel"
readme = "README.md"
license = {text = "Apache-2.0"}
requires-python = ">=3.9"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Compilers",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Programming Language :: Python :: 3",
    "Programming Language :: Rust",
]

[project.scripts]
aether = "aether_kernel.cli:main"
aether-mcp = "aether_kernel.cli:main_mcp"
aether-api = "aether_kernel.cli:main_api"

[project.urls]
Homepage = "https://github.com/baiers/aether"
Issues = "https://github.com/baiers/aether/issues"

[tool.setuptools.packages.find]
where = ["."]

[tool.setuptools.package-data]
"aether_kernel" = ["bin/*"]
